320px alignment issue
Media query to make everything width of mobile screen effected elements differently

--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width:600px)
 {
-    .mid .contain img {width: 320px;}
+    .mid .contain img {width: 1050px;}
 }
 
 
